fixes to editor.js
reorganized script from pug to separate js file
workaround for chrome bug with foreignobject scrollbar rendering

--- a/public/stylesheets/svgeditor.css
+++ b/public/stylesheets/svgeditor.css
@@ -1,15 +1,22 @@
-.left {
-	width: 20%;
-	float: left;
-	padding: 10px;
-
-	height: 100%;
-	position: relative;
+body {
+	display: flex;
 }
 
+.left {
+	order: 1;
+	flex: 1;
+
+	padding: 10px;
+	overflow-y: auto;
+	overflow-x: hidden;
+	height: 100%;
+/*	position: relative;
+*/}
+
 .right {
-	width: 80%;
-	float: right;
+	order: 2;
+	flex: 4;
+
 	padding: 10px;
 
 	height: 100%;
@@ -26,6 +33,10 @@ button#help {
 
 .precaption {
 	font-size: 10px;
+}
+
+#withDropdown {
+	position: relative; /* allows menu to display properly */
 }
 
 textarea {
@@ -155,7 +166,7 @@ line#draglink {
 
 	div.panel-default {
 		border-radius: 4px;
-		border: 1px solid lightgrey;
+		border: 1px solid grey;
 		background-color: inherit;
 	}
 
@@ -170,30 +181,8 @@ line#draglink {
 
 	div.panel-body {
 		height: 185px;
-		overflow-y: auto;
-
 		padding: 14px;
 	}
-
-	/* width */
-::-webkit-scrollbar {
-    width: 0px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-}
- 
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: #888; 
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: #555; 
-}
 
 	.panel-body .form-group {
 		margin-bottom: 14px;
